--- a/koulutus.html
+++ b/koulutus.html
@@ -131,7 +131,7 @@
     </div>
 
     <div class="back">
-        <a href="Roni_revell_cv.html">⬅ Takaisin CV:hen</a>
+        <a href="index.html">⬅ Takaisin CV:hen</a>
     </div>
 
 </div>
@@ -141,3 +141,4 @@
 
 </body>
 </html>
+
