--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
             <p><strong>Kouluttava myyjä</strong><br>Verisure Oy</p>
             <p>2017 – 2019</p>
-	    <a href="työkokemus.html" class="cta-link">
+	    <a href="työkokemus.html">Työkokemus</a>
     	    <span>Katso laajempi Kokemus</span>
             <span class="arrow">→</span>
             </a>
@@ -232,3 +232,4 @@
 
 </body>
 </html>
+
