--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
 	    <p><strong>Myynnin ammattitutkinto</strong><br>Winnova</p>
             <p>2017 - 2017</p>
-	    <a href="koulutus.html">Koulutus</a>
+	    <a href="koulutus.html" class="cta-link">
 	    <span>Katso laajempi Koulutus</span>
 	    <span class="arrow">→</span>
             </a>
@@ -232,6 +232,7 @@
 
 </body>
 </html>
+
 
 
 
