--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <ul>
                 <li>Suomi – äidinkieli</li>
                 <li>Englanti – hyvä</li>
-	  	<li>Ruotsi – Tyydyttävä</li>
+	  	<li>Ruotsi – tyydyttävä</li>
             </ul>
         </div>
 
@@ -232,6 +232,7 @@
 
 </body>
 </html>
+
 
 
 
