--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+
+
+	
     <style>
         * {
             box-sizing: border-box;
@@ -232,6 +238,7 @@
 
 </body>
 </html>
+
 
 
 
