--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <div class="container">
-  <div class="left">
+  <div class="middle">
     <!-- kuva, yhteystiedot -->
   </div>
   <div class="right">
@@ -247,6 +247,7 @@
 
 </body>
 </html>
+
 
 
 
