--- a/index.html
+++ b/index.html
@@ -109,9 +109,11 @@
             font-size: 14px;
         }
 
-        @media (max-width: 600px) {
-            header h1 {
-                font-size: 36px;
+        @media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+  }
+}
             }
         }
 .cta-link {
@@ -247,6 +249,7 @@
 
 </body>
 </html>
+
 
 
 
