--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
             font-size: 14px;
         }
 
-        @media (max-width: 768px) {
-  .container {
-    flex-direction: column;
+  @media (max-width: 600px) {
+            header h1 {
+                font-size: 36px;
   }
 }
             }
@@ -249,6 +249,7 @@
 
 </body>
 </html>
+
 
 
 
