--- a/index.html
+++ b/index.html
@@ -115,34 +115,47 @@
 }
             }
         }
+/* Pääpainike */
 .cta-link {
-    display: inline-flex;
-    align-items: center;
-    gap: 12px;
-    margin-top: 20px;
-    padding: 14px 24px;
-    background: linear-gradient(135deg, #00d4ff, #00ffa3);
-    color: #000;
-    font-weight: 700;
-    border-radius: 30px;
-    text-decoration: none;
-    box-shadow: 0 8px 25px rgba(0, 212, 255, 0.4);
-    transition: all 0.3s ease;
+  display: inline-flex;       /* teksti + nuoli samalla rivillä */
+  align-items: center;
+  gap: 8px;                   /* väli tekstin ja nuolen välillä */
+  padding: 12px 20px;
+  background-color: #0077cc;
+  color: white;
+  border-radius: 5px;
+  text-decoration: none;
+  font-weight: 500;
+  transition: background 0.3s, transform 0.2s;
 }
 
+/* Hover-efekti */
 .cta-link:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 12px 35px rgba(0, 212, 255, 0.6);
+  background-color: #005fa3;
+  transform: translateY(-1px); /* pieni liike hoverissa */
 }
 
+/* Nuoli */
 .cta-link .arrow {
-    font-size: 20px;
-    transition: transform 0.3s ease;
+  font-weight: bold;
+  transition: margin-left 0.2s;
 }
 
+/* Hoverissa nuoli liukuu hieman oikealle */
 .cta-link:hover .arrow {
-    transform: translateX(6px);
+  margin-left: 5px;
 }
+
+/* Responsiivisuus mobiilille */
+@media (max-width: 768px) {
+  .cta-link {
+    width: 100%;
+    justify-content: center;
+    padding: 14px 0;
+  }
+}
+
+
 
     </style>
 </head>
@@ -250,6 +263,7 @@
 
 </body>
 </html>
+
 
 
 
