--- a/index.html
+++ b/index.html
@@ -99,11 +99,16 @@
             font-size: 14px;
         }
 
-  @media (max-width: 600px) {
-            header h1 {
-                font-size: 36px;
+  @media (max-width: 768px) {
+  .grid {
+    display: block; /* palstat allekkain */
+  }
+  .card {
+    margin-bottom: 20px;
   }
 }
+
+  
             }
         }
 /* Pääpainike */
@@ -264,6 +269,7 @@
 
 </body>
 </html>
+
 
 
 
