--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <p><strong>Kouluttava myyjä</strong><br>Verisure Oy</p>
             <p>2017 – 2019</p>
 	   <a href="työkokemus.html" class="cta-link">
-    <span>Katso laajempi Koulutus</span>
+    <span>Katso laajempi Kokemus</span>
     <span class="arrow">→</span>
 </a>
 
@@ -255,6 +255,7 @@
 
 </body>
 </html>
+
 
 
 
